tests/errors/literals/u8-negative.fn
---
Description: Negative literal does not fit u8
Expected: compile error
---

type Program
{
    fn Main -> i32
    {
        var v: u8 = -1
        return 0
    }
}
